# nakama

./: .env.example  .gitignore  AGENT.md  Cargo.toml  Current_state.md  Func_spec_Nakama.md  LICENSE  PROJECT.md  README.md  current_state.md  mock_anthropic.py  patch_runtime.py  patch_runtime_loop.py  phase1.md  phase2.md  phase3.md  scratch.rs  test_routing.sh
.claw/: settings.json
Prompts/: phase4.md  phase5.md
docs/: phase2_notes.md
python_companion/: audit.py  inventory.py  main.py  query.py  routing.py  session.py  transcript.py
scratch/: glob_test.rs  verify.rs
scratch/.claw/: todos.json
src/: bootstrap.rs  cli.rs  compaction.rs  data_contracts.rs  error.rs  error_handling.rs  hook.rs  instruction.rs  main.rs  mcp.rs  models.rs  nim_accumulator.rs  path_scope.rs  permission.rs  plugin.rs  prompter.rs  repl.rs  runtime.rs  session.rs  slash_commands.rs  sse.rs  subcommands.rs  tests.rs  tests.rs.bak  usage.rs  worker_state.rs
src/config/: aliases.rs  mod.rs  precedence.rs
src/provider/: anthropic.rs  dashscope.rs  mod.rs  openai_compat.rs  xai.rs
src/tools/: agent_launch.rs  dispatch.rs  file_edit.rs  file_read.rs  file_write.rs  glob_search.rs  grep_search.rs  mod.rs  notebook_edit.rs  shell.rs  skill_invoke.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs
