[package]
name = "nakama"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"
shlex = "1.3"
glob = "0.3"
home = "0.5"
regex = "1.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
rustyline = "14.0"
